# Pre-trained-Faster-Grad-CAM-demo

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  demo.py  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: build.yml  test_pr.yml  tests.yml  tests_push.yml
src/PreTrainedFasterGradCAMDemo/: app.py  demo.py
src/PreTrainedFasterGradCAMDemo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/PreTrainedFasterGradCAMDemo/model/: channel_adress.csv  channel_weight.csv  vector_pa.csv
tests/: test_demo.py
