[tool.black]
line-length = 100
target-version = ['py35', 'py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | asset
)/
'''

[tool.isort]
profile= "black"
line_length = 100
force_sort_within_sections = "False"
order_by_type = "False"


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
