[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | asset
)/
'''

[tool.isort]
profile= "black"
line_length = 100
force_sort_within_sections = "False"
order_by_type = "False"


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=PreTrainedFasterGradCAMDemo --disable-pytest-warnings"
testpaths = [
    "tests",
]
